--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
 			<h2 style="text-align:center; background-color: #090C9B; color: white; margin: 0px; padding:20px; border-top-left-radius: 10px; border-top-right-radius: 10px">Bar Chart</h2>
 			<div id='barGroupDropdown'></div>
 			<div id='groupBarChart' style="background-color: white; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px"></div>
+			<div id='popBarChart' style="background-color: white; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px"></div>
 		</div>
 		<script src="https://d3js.org/d3.v4.min.js"></script>
 		<script src="https://d3js.org/topojson.v2.min.js"></script>
@@ -375,6 +376,7 @@
 
 			var barSVG = d3.select("#barChart").append("svg");
 			var barGroupSVG = d3.select("#groupBarChart").append("svg");
+			var barPopSVG = d3.select("#popBarChart").append("svg");
 			var barGroupDropdown = d3.select("#barGroupDropdown");
 
 			svg4.append("rect").attr("width", 15).attr("height", 15).attr("fill", "black").attr('x', width/2 - 60)
@@ -1219,7 +1221,7 @@
 			}
 
 			function getBarChartData(poliData){
-				console.log(selectedStates);
+				//console.log(selectedStates);
 				var dist = [];
  			 	poliData.forEach(function(index){
  				 if (!stateCountyCheckbox.property("checked")){
@@ -1231,6 +1233,15 @@
  						 dist.push(index);
  					 }
  				 }
+				 else{
+					 if (filter(index) && (selectedCounties.includes(parseInt(index.countyfips)) || selectedCounties.length == 0 || selectedCounties.length == 51)){
+ 						 var numToReplace = ["1", "2", "3", "4", "5", "6", "7", "8"];
+ 						 if (numToReplace.includes(index.CC16_410a)){
+ 							 index.CC16_410a = index.CC16_410a.concat(".0");
+ 						 }
+ 						 dist.push(index);
+ 					 }
+				 }
  			 });
  			 return dist;
 		 }
@@ -1241,6 +1252,7 @@
 			 if (group == "pop"){
 				 classes.forEach(function(fClass){
 					if (!filterClass.includes(fClass) && (fClass != group)){
+						barGroupPoliData = removeMissingData(barGroupPoliData, fClass);
 						var poliByClass = d3.nest()
 							.key(function(d) { return d[fClass]; })
 							.rollup(function(v) { return v.length; })
@@ -1287,9 +1299,9 @@
 				barSVG.selectAll("*").remove();
 				barGroupSVG.selectAll("*").remove();
 				barGroupDropdown.selectAll("*").remove();
-				if (!stateCountyCheckbox.property("checked")){
-					if(popradio.property("checked")){
-						console.log(popDist);
+				barPopSVG.selectAll("*").remove();
+				if(popradio.property("checked")){
+					if (!stateCountyCheckbox.property("checked")){
 
 						var totalPop = 0;
 						var popDistArry = [];
@@ -1301,13 +1313,10 @@
 							else{
 								totalPop += popDist[id];
 								if (selectedStates.includes(parseInt(id))){
-									console.log("Sa")
-									console.log(idToState.get(parseInt(id)))
 									popDistArry.push([idToState.get(parseInt(id)), popDist[id]]);
 								}
 							}
 						}
-						console.log(popDistArry)
 						var maxPops = popDistArry.sort(function(x, y){
 						   return d3.descending(x[1], y[1]);
 						}).slice(0,10).map(function(x) {
@@ -1321,9 +1330,102 @@
 
 						dsBarChart(maxPops, "pop");
 						//console.log(poliByPop)
-						return poliByPop;
+
+						var fClasses = poliByPop.map(function(value,index) { return value[0]; });
+
+						var select = barGroupDropdown
+						  .append('select')
+						  	.attr('class','select')
+						    .on('change',onchange)
+
+						var options = select
+						  .selectAll('option')
+							.data(fClasses).enter()
+							.append('option')
+								.text(function (d) { return d; });
+
+						function onchange() {
+							selectValue = d3.select('select').property('value');
+							barPopSVG.selectAll("*").remove();
+							poliByPop.forEach(function(fClassData){
+		 						//console.log(fClassData);
+								if (fClassData[0] == selectValue){
+									dsPopBarChart(fClassData[1], selectValue);
+									//dsGroupedBarChart(fClassData[1], "pid3", "gender");
+								}
+			 				});
+						};
+
+						var firstFClass = poliByPop[0][0];
+						poliByPop.forEach(function(fClassData){
+							if (fClassData[0] == firstFClass){
+								dsPopBarChart(fClassData[1], firstFClass);
+							}
+		 				});
 					}
-					else if(pid3radio.property("checked")){
+					else{
+						var totalPop = 0;
+						var popDistArry = [];
+
+						for (id in popDistCounty){
+							if (selectedCounties.length == 0){
+								totalPop += popDistCounty[id];
+								popDistArry.push([idToCounty.get(parseInt(id)), popDistCounty[id]]);
+							}
+							else{
+								totalPop += popDistCounty[id];
+								if (selectedCounties.includes(parseInt(id))){
+									popDistArry.push([idToCounty.get(parseInt(id)), popDistCounty[id]]);
+								}
+							}
+						}
+						var maxPops = popDistArry.sort(function(x, y){
+							 return d3.descending(x[1], y[1]);
+						}).slice(0,10).map(function(x) {
+								return {
+										"key": x[0],
+										"value": x[1],
+								}
+						});
+
+						var poliByPop = groupedBarChartDist(data, "pop");
+
+						dsBarChart(maxPops, "pop");
+
+						var fClasses = poliByPop.map(function(value,index) { return value[0]; });
+
+						var select = barGroupDropdown
+							.append('select')
+								.attr('class','select')
+								.on('change',onchange)
+
+						var options = select
+							.selectAll('option')
+							.data(fClasses).enter()
+							.append('option')
+								.text(function (d) { return d; });
+
+						function onchange() {
+							selectValue = d3.select('select').property('value');
+							barPopSVG.selectAll("*").remove();
+							poliByPop.forEach(function(fClassData){
+								//console.log(fClassData);
+								if (fClassData[0] == selectValue){
+									dsPopBarChart(fClassData[1], selectValue);
+									//dsGroupedBarChart(fClassData[1], "pid3", "gender");
+								}
+							});
+						};
+
+						var firstFClass = poliByPop[0][0];
+						poliByPop.forEach(function(fClassData){
+							if (fClassData[0] == firstFClass){
+								dsPopBarChart(fClassData[1], firstFClass);
+							}
+						});
+					}
+				}
+				else if(pid3radio.property("checked")){
 						data = removeMissingData(data, "pid3");
 						var poliByPid = groupedMapPoliDataCt(data, "pid3");
 						dsBarChart(poliByPid, "pid3");
@@ -1442,7 +1544,6 @@
 							}
 						});
 						//console.log(poliByVote2012)
-					}
 				}
 			}
 
@@ -1457,18 +1558,18 @@
 			 return perList;
 			}
 
-			function selectedSTtoLabels(){
+			function selectedAreatoLabels(areaList, idFunc){
 				var labeledList = "";
-				if (selectedStates.length == 2){
-					labeledList = " " + idToState.get(parseInt(selectedStates[0])) +" and " + idToState.get(parseInt(selectedStates[1]));
+				if (areaList.length == 2){
+					labeledList = " " + idFunc.get(parseInt(areaList[0])) +" and " + idFunc.get(parseInt(areaList[1]));
 				}
-				else if (selectedStates.length == 1){
-					labeledList = " " + idToState.get(parseInt(selectedStates[0]));
+				else if (areaList.length == 1){
+					labeledList = " " + idFunc.get(parseInt(areaList[0]));
 				}
 				else{
-					selectedStates.forEach(function(id){
-						var state = idToState.get(parseInt(id));
-						if (id != selectedStates[selectedStates.length - 1]){
+					areaList.forEach(function(id){
+						var state = idFunc.get(parseInt(id));
+						if (id != areaList[areaList.length - 1]){
 							labeledList += " " + state+",";
 						}
 						else{
@@ -1482,10 +1583,16 @@
 			function dsBarChart(data, attri) {
 				var isPercent = true;
 				var states = "";
-				if (selectedStates.length != 0){
-					states = " in the State of" + selectedSTtoLabels();
+				if (!stateCountyCheckbox.property("checked")){
+					if (selectedStates.length != 0){
+						states = " in the State of" + selectedAreatoLabels(selectedStates, idToState);
+					}
 				}
-				console.log(states)
+				else{
+					if (selectedCounties.length != 0){
+						states = " in the County of" + selectedAreatoLabels(selectedCounties, idToCounty);
+					}
+				}
 				if (attri == "pid3"){
 					title = "Political Party Identification of Respondents" + states;
 					xLabel = "Political Party";
@@ -1502,13 +1609,26 @@
 					xLabels = ["Donald Trump", "Hillary Clinton", "Gary Johnson", "Jill Stein", "Evan McMullin", "Other"];
 				}
 				else if (attri == "pop"){
-					if (selectedStates.length == 0){
-						title = "Top 10 States with Most Respondents";
+					if (!stateCountyCheckbox.property("checked")){
+						if (selectedStates.length == 0){
+							title = "Top 10 States with Most Respondents";
+						}
+						else{
+							title = "Number of Respondents" + states;
+						}
+						xLabel = "States";
 					}
 					else{
-						title = "Number of Respondents" + states;
+						if (selectedCounties.length == 0){
+							title = "Top 10 Counties with Most Respondents";
+						}
+						else{
+							title = "Number of Respondents" + states;
+						}
+						xLabel = "Counties";
 					}
-					xLabel = "States";
+
+
 					isPercent = false;
 				}
 				else{
@@ -1672,15 +1792,22 @@
 					index.values = perList1;
 					perList.push(index);
 				 });
-			 console.log(perList)
+			 //console.log(perList)
 			 return perList;
 			}
 
 			function dsGroupedBarChart(data, attri, fClass) {
 
 				var states = "";
-				if (selectedStates.length != 0){
-					states = " in the State of" + selectedSTtoLabels();
+				if (!stateCountyCheckbox.property("checked")){
+					if (selectedStates.length != 0){
+						states = " in the State of" + selectedAreatoLabels(selectedStates, idToState);
+					}
+				}
+				else{
+					if (selectedCounties.length != 0){
+						states = " in the County of" + selectedAreatoLabels(selectedCounties, idToCounty);
+					}
 				}
 
 				var isPercent = false;
@@ -1700,8 +1827,26 @@
 					xLabels = ["Donald Trump", "Hillary Clinton", "Gary Johnson", "Jill Stein", "Evan McMullin", "Other"];
 				}
 				else if (attri == "pop"){
-					title = "Top 10 States with Most Respondents";
-					xLabel = "States";
+					if (!stateCountyCheckbox.property("checked")){
+						if (selectedStates.length == 0){
+							title = "Top 10 States with Most Respondents";
+						}
+						else{
+							title = "Number of Respondents" + states;
+						}
+						xLabel = "States";
+					}
+					else{
+						if (selectedCounties.length == 0){
+							title = "Top 10 Counties with Most Respondents";
+						}
+						else{
+							title = "Number of Respondents" + states;
+						}
+						xLabel = "Counties";
+					}
+
+
 					isPercent = false;
 				}
 				else{
@@ -1863,6 +2008,158 @@
 						.text(function(d) {return d; });
 
 				legend.style("opacity","1");
+
+			}
+			function dsPopBarChart(data, fClass) {
+				var isPercent = true;
+				var states = "";
+				if (!stateCountyCheckbox.property("checked")){
+					if (selectedStates.length != 0){
+						states = " in the State of" + selectedAreatoLabels(selectedStates, idToState);
+					}
+				}
+				else{
+					if (selectedCounties.length != 0){
+						states = " in the County of" + selectedAreatoLabels(selectedCounties, idToCounty);
+					}
+				}
+				//console.log(states)
+				title = fClass + " of Respondents" + states;
+				xLabel = fClass;
+
+				if (isPercent == true){
+					data = percentifyBarData(data);
+					yLabel = "Percentage of Respondents";
+					barLabel = "%";
+				}
+				else{
+					yLabel = "Number of Respondents";
+					barLabel = "";
+				}
+
+				var margin = 80;
+				var width = 1650 - 2 * margin;
+				var height = 990 - 2 * margin;
+
+				barPopSVG = barPopSVG.attr("width", width+ 2*margin)
+					.attr("height", height+ 2*margin);
+
+				var chart = barPopSVG.append('g')
+					.attr('transform', `translate(${margin}, ${margin})`);
+
+				var x0 = d3.scaleBand()
+					.range([0, width])
+					.domain(data.map((s) => s.key))
+					.padding(0.4)
+
+
+				var y = d3.scaleLinear()
+					.range([height, 0])
+					.domain([0, d3.max(data, function (d) { return d.value; }) ]);
+
+				var xAxis = d3.axisBottom()
+              .scale(x0);
+
+				var makeYLines = () => d3.axisLeft()
+					.scale(y)
+
+				chart.append('g')
+					.attr('transform', `translate(0, ${height})`)
+					.call(xAxis);
+
+				chart.append('g')
+					.call(d3.axisLeft(y));
+
+				chart.append('g')
+					.attr('class', 'grid')
+					.call(makeYLines()
+						.tickSize(-width, 0, 0)
+						.tickFormat('')
+					)
+
+				var barGroups = chart.selectAll()
+					.data(data)
+					.enter()
+					.append('g')
+
+				barGroups.append('rect')
+					.attr('class', 'bar')
+					.attr('x', (g) => x0(g.key))
+					.attr('y', (g) => y(g.value))
+					.attr('height', (g) => height - y(g.value))
+					.attr('width', x0.bandwidth())
+					.on('mouseenter', function(actual, i) {
+						d3.select("#popBarChart").selectAll('.value')
+							.attr('opacity', 0)
+
+						d3.select(this)
+							.transition()
+							.duration(300)
+							.attr('opacity', 0.6)
+							.attr('x', (a) => x0(a.key) - 5)
+							.attr('width', x0.bandwidth() + 10)
+
+						barGroups.append('text')
+							.attr('class', 'divergence')
+							.attr('x', (a) => x0(a.key) + x0.bandwidth() / 2)
+							.attr('y', (a) => y(a.value) - 5)
+							.attr('fill', 'black')
+							.attr('text-anchor', 'middle')
+							.text((a, idx) => {
+								var divergence = (a.value - actual.value).toFixed(1)
+
+								let text = ''
+								if (divergence > 0) text += '+'
+								text += `${divergence}${barLabel}`
+
+								return idx !== i ? text : '';
+							})
+
+					})
+					.on('mouseleave', function() {
+						d3.selectAll('.value')
+							.attr('opacity', 1)
+
+						d3.select(this)
+							.transition()
+							.duration(300)
+							.attr('opacity', 1)
+							.attr('x', (a) => x0(a.key))
+							.attr('width', x0.bandwidth())
+
+						chart.selectAll('#limit').remove()
+						chart.selectAll('.divergence').remove()
+					})
+
+				barGroups.append('text')
+					.style("fill", "black")
+					.attr('class', 'value')
+					.attr('x', (a) => x0(a.key) + x0.bandwidth() / 2)
+					.attr('y', (a) => y(a.value) - 5)
+					.attr('text-anchor', 'middle')
+					.text((a) => `${a.value}${barLabel}`)
+
+				barPopSVG.append('text')
+					.attr('class', 'label')
+					.attr('x', -(height / 2) - margin)
+					.attr('y', margin / 2.4)
+					.attr('transform', 'rotate(-90)')
+					.attr('text-anchor', 'middle')
+					.text(yLabel)
+
+				barPopSVG.append('text')
+					.attr('class', 'label')
+					.attr('x', width / 2 + margin)
+					.attr('y', height + margin * 1.7)
+					.attr('text-anchor', 'middle')
+					.text(xLabel)
+
+				barPopSVG.append('text')
+					.attr('class', 'title')
+					.attr('x', width / 2 + margin)
+					.attr('y', 40)
+					.attr('text-anchor', 'middle')
+					.text(title)
 
 			}
         </script>
