--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<h2 style="text-align:center; background-color: #090C9B; color: white; margin: 0px; padding:20px; border-top-left-radius: 10px; border-top-right-radius: 10px">United State of America</h2>
 				<div id='mapHere' style="width: 1000px; background-color: white; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px"></div>
 				<div id='labelsHere' style="width: 1000px;"></div>
-			</div>
+				</div>
 			<div id='radio' style="border: #090C9B solid 2px; margin:20px; border-radius:10px; width: 30%">
 				<h2 style="text-align:center; background-color: #090C9B; color: white; margin: 0px; margin-bottom:20px; padding:20px; border-top-left-radius: 10px; border-top-right-radius: 10px">Data Options</h2>
 				<div style="padding-left:10px; padding-right:10px">
@@ -106,7 +106,12 @@
 					<br>
 					<input type="radio" name="dataType" value="2012_vote" id='vote2012'>2012 Predisential Election Results</input>
 					<br>
-					<h3 style="text-align:center">Filters</h3>
+					<br>
+					<details>
+						<summary>
+							<b>Filters</b>
+						</summary>
+					
 					<br>
 					<div style="display:flex; flex-direction: row; flex-wrap: wrap;">
 						<div style="width: 50%">
@@ -336,6 +341,7 @@
 					<button style="margin-bottom: 10px" type="button" id="clrButton">Clear Selection</button>
 					<button style="margin-bottom: 10px" type="button" id="clrFilter">Clear Filters</button>
 				</div>
+				</details>
 			</div>
 		</div>
 		<div style="border: #090C9B solid 2px; margin:20px; border-radius: 10px">
@@ -2268,3 +2274,4 @@
         </script>
     </body>
 </html>
+<details></details>
